test/end-to-end/runnable/call-fun-pointer-void.crow
import
	crow/io/print: out, print

main void() summon
	xs string mut[] = ()
	res = xs.get-fun[xs ~= "arg"]
	out print (" " join xs.move-to)
	out print "{res}"

get-fun nat function()(xs string mut[])
	xs ~= "get-fun"
	&foo

foo nat()
	3
