test/end-to-end/compile-errors/string-js-any.crow
import
	crow/js: js-any

main void()
	_ js-any = "foo"
